--- a/common/css/screen.css
+++ b/common/css/screen.css
@@ -64,6 +64,7 @@ article>header{padding-bottom:20px;margin-bottom:40px;border-bottom:1px solid rg
 article>header p{font-family:fakt,Helvetica,Arial,sans-serif}
 article>header a{color:#222}
 article>header ul.themas li{display:inline-block; margin-right:15px;}
+article>header ul.themas li.alltexts-btn{float: right;}
 
 ul.subnav{border-bottom:1px solid rgba(0,0,0,.1);padding-bottom:18px;margin-bottom:40px;margin-top:-20px}
 ul.subnav li{display:inline-block}
@@ -96,12 +97,12 @@ section.post a.readmore{font-family:fakt,Helvetica,Arial,sans-serif;font-size:17
 section{border-bottom:1px solid rgba(0,0,0,.1);padding-bottom:20px;margin-bottom:40px}
 section header{margin-bottom:20px}
 section:last-child{border-bottom:0;margin-bottom:0;padding-bottom:0}
-section div.postbody p{font-family: 'Playfair Display', serif; font-size:16px;}
+section div.postbody p{font-family: 'Old Standard TT', serif; font-size:18px;}
 @media(min-width:900px){section{display:flex;padding-bottom:40px}
 section header{width:30%;margin-right:40px}
 section div.postbody{width:70%}}
 
-section div.formpostbody {font-family: 'Playfair Display', serif; font-size:16px;}
+section div.formpostbody {font-family: 'Old Standard TT', serif; font-size:16px;}
 @media(min-width:900px){section{display:flex;padding-bottom:40px}
 section div.formpostbody{width:100%}}
 small.smallbookcase{font-size: 14px; font-weight:700}
@@ -178,7 +179,8 @@ div.opening .intro-text {
   font-size: 1.5rem;
   line-height: 2.5rem;
   color: #fff;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Old Standard TT', serif;
+
   margin: auto;
   padding-left: 40px;
 }
@@ -192,7 +194,8 @@ div.opening .intro-text {
     font-size: 3.5rem;
     line-height: 5.5rem;
     color: #fff;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Old Standard TT', serif;
+
     margin: auto;
     padding-left: 40px;
   }
@@ -200,6 +203,7 @@ div.opening .intro-text {
 .text-intro {
   color: #BD5D38 !important;
 }
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -218,10 +222,9 @@ div.opening .intro-text {
 /* Modal Content */
 .modal-content {
     float: right;
+    width: 50%;
     background-color: #fefefe;
     padding: 20px;
-    border: 1px solid #888;
-    width: 50%;
 }
 
 /* The Close Button */
